[package]
name = "perlin_noise"
version = "1.0.1"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
keywords = ["noise","perlin","random"]
license = "MIT"
repository = "https://github.com/Lapz/perlin_noise"
description = "A simple perlin noise implementation in Rust"

[dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }