[package]
name = "noisier"
version = "1.0.1"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
keywords = ["noise","perlin","simplex","random","dimension","3d","tileable","texture"]
license = "MIT"
repository = "https://github.com/Lapz/perlin_noise"
description = "An iterative N-dimensional Perlin-class noise implementation in Rust"
resolver = "2"

[dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
image = "0.24.1"
sorting_rs = "1.2.10"
